bpp3: create ubifs image

--- a/meta-bsp/conf/machine/bpp3.conf
+++ b/meta-bsp/conf/machine/bpp3.conf
@@ -27,7 +27,7 @@ PREFERRED_PROVIDER_jpeg = "jpeg"
 KERNEL_IMAGETYPE = "uImage"
 
 # as minimum ubifs format of rootfs is required to program nand memory
-IMAGE_FSTYPES += "tar.gz ubi"
+IMAGE_FSTYPES += "tar.gz ubifs"
 
 # UBI image
 UBI_VOLNAME="rootfs"
