First step in rpi2 integration
 * Started with agherzan/meta-raspberrypi#274539
 * Copy machine configuration files, including broadcom license.
 * Classes for adding sdcard image, and common code.
 * Copy these recipes: linux-raspberrypi-4.1, linux-firmware,
   bcm2835-bootfiles.
 * u-boot configuration borrowed from bbb.
 * Added patch to fix kernel configuration patching

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -9,3 +9,6 @@ BBFILES := "${BBFILES} \
 BBFILE_COLLECTIONS += "victronenergy-bsp"
 BBFILE_PATTERN_victronenergy-bsp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_victronenergy-bsp = "5"
+
+# Additional license directories.
+LICENSE_PATH += "${LAYERDIR}/licenses"
