Switch to u-boot.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -2,14 +2,15 @@
 #@NAME: RaspberryPi 2 Development Board
 #@DESCRIPTION: Machine configuration for the RaspberryPi 2
 
+SOC_FAMILY = "rpi"
+include conf/machine/include/soc-family.inc
+
 DEFAULTTUNE ?= "cortexa7thf-neon-vfpv4"
 
 require conf/machine/include/tune-cortexa7.inc
-include conf/machine/raspberrypi2/rpi-base.inc
 
+MACHINE_FEATURES = "apm usbhost keyboard vfat ext2 serial screen touchscreen alsa bluetooth wifi sdio"
 SERIAL_CONSOLE = "115200 ttyAMA0"
-
-UBOOT_MACHINE = "rpi_2_config"
 
 # Inputs for machine-conf-runtime recipe
 MACHINE_FEATURES += "headless"
@@ -30,7 +31,7 @@ UBOOT_SUFFIX = "bin"
 # Kernel name 
 SDIMG_KERNELIMAGE ?= "kernel7.img"
 
-KERNEL_IMAGETYPE = "zImage"
+KERNEL_IMAGETYPE = "uImage"
 IMAGE_BOOT_FILES ?= "u-boot.${UBOOT_SUFFIX} uEnv.txt"
 
 # Added dosfstools-native and mtools-native since wic otherwise
