rpi has no apm support, removing feature.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -9,7 +9,7 @@ DEFAULTTUNE ?= "cortexa7thf-neon-vfpv4"
 
 require conf/machine/include/tune-cortexa7.inc
 
-MACHINE_FEATURES = "apm usbhost keyboard vfat ext2 serial screen touchscreen alsa bluetooth wifi sdio"
+MACHINE_FEATURES = "usbhost keyboard vfat ext2 serial screen touchscreen alsa wifi sdio"
 SERIAL_CONSOLE = "115200 ttyAMA0"
 
 # Inputs for machine-conf-runtime recipe
