Use /dev/ttyMKx for the mkx port on rasperrypi2.
This will be symlinked by udev, otherwise it will just cause mk2-dbus to sit
in a loop.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -14,7 +14,7 @@ SERIAL_CONSOLE = "115200 ttyAMA0"
 
 # Inputs for machine-conf-runtime recipe
 MACHINE_FEATURES += "headless"
-VE_MKX_PORT = ""
+VE_MKX_PORT = "/dev/ttyMKx"
 VE_VEDIRECT_PORTS = ""
 VE_RELAYS = ""
 
