raspberrypi2: Move kernel into rootfs, switch to zImage.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -31,7 +31,7 @@ UBOOT_SUFFIX = "bin"
 # Kernel name 
 SDIMG_KERNELIMAGE ?= "kernel7.img"
 
-KERNEL_IMAGETYPE = "uImage"
+KERNEL_IMAGETYPE = "zImage"
 IMAGE_BOOT_FILES ?= "u-boot.${UBOOT_SUFFIX} uEnv.txt"
 
 # Added dosfstools-native and mtools-native since wic otherwise
