raspberrypi2: Add x11 server info to machine file.
This is not used in Venus. It is required if any of your *other* images
or distros use an X-server, so this is for downstream compatibility.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -57,4 +57,13 @@ KERNEL_DEVICETREE ?= " \
     overlays/pitft28-capacitive-overlay.dtb \
     "
 
+# Where an X-server is used in an image, these are the packages you need
+XSERVER = " \
+    xserver-xorg \
+    xf86-input-evdev \
+    xf86-input-mouse \
+    xf86-input-keyboard \
+    xf86-video-fbdev \
+    "
+
 IMAGE_CLASSES += "sdcard_image-rpi"
