--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -44,6 +44,7 @@ MACHINE_EXTRA_RDEPENDS += "kernel-modules kernel-image"
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-raspberrypi"
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot-raspberrypi2"
+PREFERRED_VERSION_u-boot-env-tools = "v2016.11-rc3"
 
 # Kernel Version
 PREFERRED_VERSION_linux-raspberrypi ?= "4.4.%"
