raspberrypi2: Include linux-firmware for pi, prevent shutdown of common realtek 8192.
This recipe has been in the Rpi tree for a long time, but never included
because the layer.conf file did not include .bbappend files. That has been
fixed, as well as including configuration for the common r8192cu usb wifi
module.

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -4,6 +4,7 @@ BBFILES := "${BBFILES} \
 	${LAYERDIR}/recipes-*/*.bb \
 	${LAYERDIR}/recipes-*/*/*.bb \
 	${LAYERDIR}/recipes-*/*/*/*.bb \
+    ${LAYERDIR}/recipes-*/*/*.bbappend \
 "
 
 BBFILE_COLLECTIONS += "victronenergy-bsp"
