Add useful overlays for 3rd party use.
This includes overlays to make the serial terminal work on the Pi3.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -56,6 +56,10 @@ KERNEL_DEVICETREE ?= " \
     bcm2709-rpi-2-b.dtb \
     bcm2710-rpi-3-b.dtb \
     overlays/pitft28-capacitive-overlay.dtb \
+    overlays/pi3-disable-bt-overlay.dtb \
+    overlays/pi3-miniuart-bt-overlay.dtb \
+    overlays/mcp2515-can0-overlay.dtb \
+    overlays/mcp2515-can1-overlay.dtb \
     "
 
 # Where an X-server is used in an image, these are the packages you need
