raspberrypi2: Move boot partition creation to venus-boot-image recipe.
Note: We split do_rootfs into two allow machine-specific appends to add
things to the boot image before we finalise (compress/link) it.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -32,7 +32,8 @@ UBOOT_SUFFIX = "bin"
 SDIMG_KERNELIMAGE ?= "kernel7.img"
 
 KERNEL_IMAGETYPE = "zImage"
-IMAGE_BOOT_FILES ?= "u-boot.${UBOOT_SUFFIX} uEnv.txt"
+IMAGE_BOOT_FILES ?= "u-boot.${UBOOT_SUFFIX} u-boot-rpi3.bin uEnv.txt uboot.env \
+    config.txt bcm2835-bootfiles/*"
 
 # Added dosfstools-native and mtools-native since wic otherwise
 # fails on the build machine
@@ -52,15 +53,20 @@ PREFERRED_VERSION_linux-raspberrypi ?= "4.4.%"
 # Set Raspberrypi splash image
 SPLASH = "psplash-raspberrypi"
 
-KERNEL_DEVICETREE ?= " \
+KERNEL_DEVICE_BLOBS = " \
     bcm2709-rpi-2-b.dtb \
     bcm2710-rpi-3-b.dtb \
+"
+
+KERNEL_DEVICE_OVERLAYS = " \
     overlays/pitft28-capacitive-overlay.dtb \
     overlays/pi3-disable-bt-overlay.dtb \
     overlays/pi3-miniuart-bt-overlay.dtb \
     overlays/mcp2515-can0-overlay.dtb \
     overlays/mcp2515-can1-overlay.dtb \
-    "
+"
+
+KERNEL_DEVICETREE ?= "${KERNEL_DEVICE_BLOBS} ${KERNEL_DEVICE_OVERLAYS}"
 
 # Where an X-server is used in an image, these are the packages you need
 XSERVER = " \
