raspberrypi2: Switch rootfs to ext4.
Also use gzip compression to bring this more in line with the swu recipe.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -19,7 +19,7 @@ VE_VEDIRECT_PORTS = ""
 VE_RELAYS = ""
 
 # Sort these out later
-IMAGE_FSTYPES ?= "tar.bz2 ext3 rpi-sdimg"
+IMAGE_FSTYPES ?= "tar.bz2 ext4.gz rpi-sdimg"
 
 # config of u-boot to be used
 UBOOT_MACHINE = "rpi_2_config"
