--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -14,7 +14,7 @@ SERIAL_CONSOLE = "115200 ttyAMA0"
 
 # Inputs for machine-conf-runtime recipe
 MACHINE_FEATURES += "headless"
-VE_MKX_PORT = "/dev/ttyMKx"
+VE_MKX_PORT = "/dev/ttyMK3"
 VE_VEDIRECT_PORTS = ""
 VE_RELAYS = ""
 
