--- a/meta-venus/conf/distro/venus.conf
+++ b/meta-venus/conf/distro/venus.conf
@@ -60,6 +60,7 @@ SANITY_TESTED_DISTROS ?= " \
             Ubuntu 14.04.4 LTS \n \
             Ubuntu 14.04.5 LTS \n \
             Ubuntu-14.04 \n \
+            Ubuntu-16.04 \n \
 	    "
 
 # Default hash policy for distro
