raspberrypi2: provide a root shell on console
With the root password disabled by default, we provide a root shell on both
the serial console and the first console, so the device is accessable for
debugging and testing.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -10,7 +10,8 @@ DEFAULTTUNE ?= "cortexa7thf-neon-vfpv4"
 require conf/machine/include/tune-cortexa7.inc
 
 MACHINE_FEATURES = "usbhost keyboard vfat ext2 serial screen touchscreen alsa wifi sdio"
-SERIAL_CONSOLE = "115200 ttyAMA0"
+SERIAL_CONSOLES = "-l;/sbin/autologin;-n;115200;ttyAMA0 -l;/sbin/autologin;-n;38400;tty1"
+USE_VT = "0"
 
 # Inputs for machine-conf-runtime recipe
 MACHINE_FEATURES += "headless"
