Pass original boot parameters from start.elf to kernel.
We do this by loading the original bootargs from the device tree. We have no
cmdline.txt file by default, all parameters are handled by u-boot.

This change sorts out all issues where a setting in config.txt fails to work
because we strip it out in the u-boot intermediary config.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -34,7 +34,8 @@ SDIMG_KERNELIMAGE ?= "kernel7.img"
 
 KERNEL_IMAGETYPE = "zImage"
 IMAGE_BOOT_FILES ?= "u-boot.${UBOOT_SUFFIX} u-boot-rpi3.bin uEnv.txt uboot.env \
-    config.txt bcm2835-bootfiles/*"
+    config.txt bcm2835-bootfiles/*.bin bcm2835-bootfiles/*.elf \
+    bcm2835-bootfiles/*.dat bcm2835-bootfiles/LICENCE.broadcom"
 
 # Added dosfstools-native and mtools-native since wic otherwise
 # fails on the build machine
