raspberrypi2: Upgrade kernel to 4.9.
The upstream Raspberrypi maintained kernel stopped tracking 4.4.

--- a/meta-bsp/conf/machine/raspberrypi2.conf
+++ b/meta-bsp/conf/machine/raspberrypi2.conf
@@ -42,7 +42,7 @@ PREFERRED_PROVIDER_virtual/bootloader = "u-boot-raspberrypi2"
 PREFERRED_VERSION_u-boot-fw-utils = "2017.09"
 
 # Kernel Version
-PREFERRED_VERSION_linux-raspberrypi ?= "4.4.%"
+PREFERRED_VERSION_linux-raspberrypi ?= "4.9.%"
 
 KERNEL_DEVICE_BLOBS = " \
     bcm2709-rpi-2-b.dtb \
@@ -57,6 +57,7 @@ KERNEL_DEVICE_OVERLAYS = " \
     overlays/pi3-miniuart-bt-overlay.dtb \
     overlays/mcp2515-can0-overlay.dtb \
     overlays/mcp2515-can1-overlay.dtb \
+    overlays/pitft35-resistive-overlay.dtb \
 "
 
 KERNEL_DEVICETREE ?= "${KERNEL_DEVICE_BLOBS} ${KERNEL_DEVICE_OVERLAYS}"
