--- a/meta-venus/conf/distro/venus.conf
+++ b/meta-venus/conf/distro/venus.conf
@@ -39,6 +39,7 @@ PREFERRED_PROVIDER_jpeg = "jpeg"
 PREFERRED_PROVIDER_jpeg-native = "jpeg-native"
 PREFERRED_VERSION_libarchive = "3.1.2"
 PREFERRED_VERSION_swupdate = "2016.07"
+PREFERRED_VERSION_python-pyserial = "3.4"
 
 # No idea what a good choice is here, this is from the meta-java its manpage
 # Possible provider: cacao-initial-native and jamvm-initial-native
